# Commitment-Boundary

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: pages.yml
attributions/: activation_cache.py  modeling.py  precollect_solution_probe_cache.py  solution_probe_early_exit_exps.py  summarize_solution_probe_sweep.py  trace_context.py  train_solution_probe.py  utils.py  vllm_cot_number_perturbation.py  vllm_sentence_causal.py
attributions/shared/: __init__.py  cache.py  metrics.py  sentence.py  threshold.py
docs/: PIPELINE.md
scripts/: generate_traces.py  run_pipeline.sh
tests/: test_sentence.py
website/: CNAME  blogpost.html  index.html
