[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commitment-boundary"
version = "0.1.0"
description = "Code for probing commitment boundaries and epiphenomenal chain-of-thought"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4",
    "fire>=0.7",
    "math-verify[antlr4-13-2]>=0.9",
    "nnsight>=0.5.15",
    "numpy>=1.26",
    "torch>=2.7",
    "tqdm>=4.66",
    "transformers>=4.57",
]

[project.optional-dependencies]
vllm = ["vllm>=0.12"]
code-eval = ["evalplus>=0.3"]
dev = ["pytest>=8", "ruff>=0.12"]

[tool.setuptools.packages.find]
include = ["attributions*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
